--- a/index.html
+++ b/index.html
@@ -14,30 +14,25 @@
 
   <body>
     <header>
-      <h1>Kathy Trujillo</h1>
-      <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-          <ul>
-              <li class="nav-item">
-                  <a href="#nav-link" href="/index.html">About</a>
+      <nav class="navbar navbar-light" style="background-color: #ecf0f1;"> 
+          <ul class="nav-items">
+              <li>
+                  <a href="/index.html">About</a>
               </li>
-              <li class="nav-item">
-                  <a href="#nav-link" href="./portfolio.html">Portfolio</a>
+              <li>
+                  <a href="./portfolio.html">Portfolio</a>
               </li>
-              <li class="nav-item">
-                  <a href="#nav-link" href="./contact.html">Contact</a>
+              <li>
+                  <a href="./contact.html">Contact</a>
               </li>
           </ul>
       </nav>
     </header>
-      <main class="main"></main>
-      <footer class="footer"><small>&copy; Copyright 2020, Example Corporation</small></footer>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+      <main></main>
     
+    <footer>
+      <small>&copy; Copyright 2020, Example Corporation</small>
+    </footer>
     
   </body>
 </html>
