--- a/portfolio.html
+++ b/portfolio.html
@@ -13,21 +13,21 @@
   </head>
 
   <body>
-    <header>
+
       <nav class="navbar navbar-light" style="background-color: #ecf0f1;"> 
-          <ul class="nav-items">
-              <li>
-                  <a href="#nav-link" href="/index.html">About</a>
-              </li>
-              <li>
-                  <a href="#nav-link" href="./portfolio.html">Portfolio</a>
-              </li>
-              <li>
-                  <a href="#nav-link" href="./contact.html">Contact</a>
-              </li>
-          </ul>
-      </nav>
-    </header>
+        <ul class="nav-items">
+            <li>
+                <a href="./contact.html">Contact</a>
+            </li>
+            <li>
+                <a href="./portfolio.html">Portfolio</a>
+            </li>
+            <li>
+                <a href="./index.html">About</a>
+            </li>
+        </ul>
+    </nav>
+
       <main> </main>
     
     <footer>
