added sticky footer

--- a/index.html
+++ b/index.html
@@ -20,38 +20,42 @@
     <nav class="navbar navbar-light" style="background-color: #ecf0f1;">
       <div class="my-name">
         <a class="navbar-brand" href="#">Kathy Trujillo</a>
-      </div>      
+      </div>
+
         <ul class="nav-items">
-          <li class="nav-item">
+          <li>
             <a class= "Contact" href="./contact.html">Contact</a>
           </li>            
-          <li class="nav-item">
+          <li>
             <a class="Portfolio" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="nav-item">
+          <li>
           <a class="About" href="./index.html">About</a>
           </li>
         </ul> 
       </div>           
     </nav>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 col-sm-12">
-          <h1 class="page header">About Me</h1>
-          <img class="img-responsive" src="http://placehold.it/300x300" alt="Profile Image">
-        </div>
-        <div class="col-md-6 col-sm-12">
-          <p class="text-justify">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut metus pretium, tincidunt orci sit amet, placerat mi. Fusce posuere odio quis dui vulputate, a ornare elit consequat. Morbi porta leo at dolor condimentum dignissim. Sed tellus lectus, sollicitudin sit amet risus sit amet, consectetur auctor diam. Maecenas mollis mi ex, ut porttitor urna egestas eget. Fusce ac pharetra enim. Nulla tellus mauris, ornare at felis et, posuere sagittis sapien. Ut auctor tortor et mauris ultrices, a tincidunt velit pharetra. Etiam blandit pharetra sem, et aliquam libero aliquam at. Curabitur ut augue odio. Proin sodales libero et enim dapibus fringilla. Aenean non ante scelerisque, efficitur justo eleifend, efficitur massa. Proin cursus tristique ligula, vel fringilla ipsum posuere et. Mauris massa nulla, elementum vitae rutrum eget, aliquet nec sapien.</p>
-        </div>
+    <section>
+      <div class="container-fluid">
+        <!-- <div class="row"> -->
+          <div class="col-sm-8">
+            <div class="card">
+              <div class="card-body">
+              <h1 class="card header">About Me</h1>
+                <img class="img-responsive" src="http://placehold.it/300x300" alt="Profile Image">
+                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Fermentum posuere urna nec tincidunt praesent semper feugiat nibh. Cursus metus aliquam eleifend mi in nulla. Sollicitudin ac orci phasellus egestas tellus rutrum tellus pellentesque. Scelerisque viverra mauris in aliquam sem fringilla ut morbi tincidunt. Vel orci porta non pulvinar neque laoreet suspendisse interdum. Tincidunt eget nullam non nisi est sit. In nisl nisi scelerisque eu ultrices. Eget nulla facilisi etiam dignissim diam quis enim lobortis scelerisque. Sagittis id consectetur purus ut faucibus. Orci eu lobortis elementum nibh. Vitae congue mauris rhoncus aenean. Ornare massa eget egestas purus viverra. Risus sed vulputate odio ut enim blandit. Gravida cum sociis natoque penatibus et.
+                  <div class="col-sm-4">
+                  </div>
+              </div>
+            </div>
+          </div>
+    </section>
+    
+    <footer class="footer">
+      <div class="container">
+          <span class="text-muted">&copy; Copyright 2020, Example Corporation</span>
       </div>
-    </div>
-
-    <br>
-    <footer>
-      <small>&copy; Copyright 2020, Example Corporation</small>
-    </footer>
+  </footer>
 
     <!-- Javscript starts here -->
     <script 
